Now for new purpose...
It is not the remote page for my website

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome!</title>
+<title>Redirecting...</title>
 </head>
 <body>
 
-<h1>Welcome!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
-<p></p>
-<h2>Welcome to the JHi2 page list!!!!!!!!</h2>
-  
+<h1>This site is not intended for standerd users.</h1>
+<p>If you are intanding to get to JohnnyTech please go to: <a href="johnnytech.net">johnnytech.net</a>.</p>
+<br>
+<p>Now redirecting to JohnnyTech remote website content in 10 seconds.</p>
+<META HTTP-EQUIV="REFRESH" CONTENT="10; url=johnnytech.net">
   
 
 </body>
