--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>If you are intanding to get to JohnnyTech please go to: <a href="johnnytech.net">johnnytech.net</a>.</p>
 <br>
 <p>Now redirecting to JohnnyTech remote website content in 10 seconds.</p>
-<META HTTP-EQUIV="REFRESH" CONTENT="10; url=remote.html">
+<META HTTP-EQUIV="REFRESH" CONTENT="10; url=main.html">
   
 
 </body>
