--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>Inspiring software soulutions</h1>
-        <img src="https://getwallpapers.com/wallpaper/full/3/6/6/1090117-best-cool-tech-backgrounds-1920x1200-photo.jpg" width= 1000px>
+        <img src="Header.png" width= 1000px>
         
     </body>
 </html>
