--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>This site is not intended for standerd users.</h1>
-<p>If you are intanding to get to JohnnyTech please go to: <a href="johnnytech.net">johnnytech.net</a>.</p>
+<p>If you are intanding to get to JohnnyTech please go to: <a href="https://johnnytech.net">johnnytech.net</a>.</p>
 <br>
 <p>Now redirecting to JohnnyTech remote website content in 10 seconds.</p>
 <META HTTP-EQUIV="REFRESH" CONTENT="10; url=main.html">
