--- a/main.html
+++ b/main.html
@@ -13,13 +13,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <script src="//code.tidio.co/jaejxukqpgz7v5sga3ecdmliekh8zs2w.js" async></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1 id="headertext">Inspiring software soulutions</h1>
-        <img src="Header.png" width= 1000px id="headerimage">
+        <h2 id="menu"><a>JohnnyTech</a></h2>
+
+        
         
     </body>
 </html>
