THAT MAKES IT WORSE FIXING NOW

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <script src="//code.tidio.co/jaejxukqpgz7v5sga3ecdmliekh8zs2w.js" async></script>
     </head>
     <body>
-        <h2 text-decoration="none" id="menu"><a href="johnnytech.net">JohnnyTech</a></h2>
+        <h2  id="menu"><a href="johnnytech.net">JohnnyTech</a></h2>
 
         
         
