--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
     </head>
     <body>
         <h2  id="menu"><a href="https://johnnytech.net">JohnnyTech</a></h2>
+        <img src="header.png">
 
         
         
