--- a/main.html
+++ b/main.html
@@ -16,11 +16,16 @@
         <script src="//code.tidio.co/jaejxukqpgz7v5sga3ecdmliekh8zs2w.js" async></script>
     </head>
     <body>
-        <h2  id="menu"><a href="https://johnnytech.net">JohnnyTech</a></h2>
-        <img src="header.png">
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <h1>Inspiring software soulutions</h1>
 
+        <img src="Header.png" width= 1000px>
         
         
     </body>
 </html>
+
+
 
