--- a/main.html
+++ b/main.html
@@ -19,9 +19,8 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Inspiring software soulutions</h1>
-
-        <img src="Header.png" width= 1000px>
+        <h2 id="menu">JohnnyTech</h2>
+        <img src="header.png">
         
         
     </body>
