--- a/main.html
+++ b/main.html
@@ -20,7 +20,9 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h2 id="menu">JohnnyTech</h2>
-        <img src="header.png">
+        <div class="parallax" >
+            <h1>Our programs are the finest.</h1>
+        </div>
         
         
     </body>
